<resources>
    <string name="app_name">CactusNotes</string>
    <string name="already_have_an_account">ALREADY HAVE AN ACCOUNT?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="e_mail">E-mail</string>
    <string name="successful">Successful</string>
    <string name="required">Email is required</string>
    <string name="invalid">Email is invalid</string>
    <string name="password_required">Password is required</string>
    <string name="email_invalid">Email is invalid</string>
    <string name="user_name_required">Username is required</string>
    <string name="is_valid_error">Username can only include a–z, 0–9 and _ characters</string>
    <string name="user_name_sort">Username is too short</string>
    <string name="user_name_long">Username is too long</string>
    <string name="password_empty">Password is required</string>
    <string name="password_short">Password is too short</string>
    <string name="password_long">Password is too long</string>
    <string name="password_special_character">Password must contain one digit, one uppercase letter,
        one lowercase letter and one special character</string>
    <string name="connectivity_problems_message">Couldn’t connect to the servers. Please check your connection.</string>
    <string name="some_error_message">Some error occurred. Please try again later.</string>
    <string name="other_error_message">"Please try again later."</string>
    <string name="unexpected_error_occurred">"Some unexpected error occurred."</string>
    <string name="e_mail_or_username">E-mail or Username</string>
    <string name="log_in">Log In</string>
    <string name="create_an_account">CREATE AN ACCOUNT</string>
    <string name="email_required">Email or username is required.</string>
    <string name="invalid_login_message">Invalid credentials. Please double-check your e-mail, username or password.</string>
    <string name="login_password_empty">Password is required.</string>
    <string name="note_list_bar">Cactus Notes</string>
    <string name="any_notes">You don\'t have any notes. Click below button to add one!</string>
    <string name="offline_note_error">Couldn\'t connect to the servers. Please check your connection.</string>
    <string name="your_session_is_expired">Your session is expired. Please log in.</string>
    <string name="retry">Retry</string>
    <string name="empty_title">Untitled</string>
    <string name="empty_note">Write something...</string>
    <string name="alert_dialog_message">This action is irreversable. Are you sure you want to delete this note?</string>
    <string name="cancel">CANCEL</string>
    <string name="delete">DELETE</string>
    <string name="cannot_create_note">Cannot create this note. Some error occured.</string>
    <string name="cannot_edit_note">Some error occured. Cannot edit note.</string>
    <string name="error_delete">Error occurred. Cannot delete note.</string>

</resources>